avalon_uva/app/assets/stylesheets/branding.scss
/*
 * Copyright 2011-2025, The Trustees of Indiana University and Northwestern
 *   University.  Licensed under the Apache License, Version 2.0 (the "License");
 *   you may not use this file except in compliance with the License.
 *
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed
 *   under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
 *   CONDITIONS OF ANY KIND, either express or implied. See the License for the
 *   specific language governing permissions and limitations under the License.
 * ---  END LICENSE_HEADER BLOCK  ---
*/

/**
 * Custom branding for Avalon to override Bootstrap, Hydra, and Blacklight
 * defaults. This should be included at the top of the application.scss file
 * so it is preferred over the defaults. */

@import 'color-vars';
@import 'fonts';
@import 'variables';

/**
  Custom variables (Non-bootstrap)
*/
$sansFontFamily: $font-primary;
$museoSlab: $font-primary;

// Primary colors
$primary: $brand-blue;
$secondary: $blue-alt-darkest;
$dark: $brand-orange-dark;

// Secondary colors
//$yellow: '_color-vars.scss'
$orange: $brand-orange;
//$white: '_color-vars.scss'
$blueGreen: $teal-darker;

// Colors not from the Styleguide
$greenBG: $green-lightest;
$gray: $grey;
$lightgray: $grey-light;
//$red: '_color-vars.scss'
$blue: $brand-blue;
$lightblue: $brand-blue-light;

// Generated palate colors from http://colormind.io/ for Avalon style guide
// Add new HEX values below to match your organization's flavor of info/success/warning/danger
$info: map-get($alert-background-colors, "regional-alert-informational");
$success: map-get($alert-background-colors, "alert-level-3");
$warning: map-get($alert-background-colors, "alert-level-2");
$danger: map-get($alert-background-colors, "alert-level-1");

/**
  * Bootstrap variable overrides
  *
  * A full list of supported overrides can be found at:
  * https://github.com/twbs/bootstrap-sass/blob/master/assets/stylesheets/bootstrap/_variables.scss */

/* Branding colors */
$brand-primary: $secondary;
$brand-success: $success;
$brand-info: $info;
$brand-warning: $warning;
$brand-danger: $danger;

/* Fonts */
$font-family-sans-serif: $font-primary;
$font-family-serif: $font-primary;

/* Components */
$padding-base-vertical: 14px; /* $spacing-unit / 4em; */

/* Headings */
// $headings-font-family: $museoSlab;

/* Links */
$link-color: $secondary;
$link-hover-color: $primary;

/* Alerts */
//$alert-bg-level: 0;
//$alert-border-level: 1;
//$alert-color-level: -10;
$alert-success-bg: $success;
$alert-success-text: $brand-blue;
$alert-success-border: $success;

/* General states (success, info, warning, danger) */
$state-warning-bg: $warning;
$state-warning-border: $warning;
$state-warning-text: $secondary;
$state-danger-bg: $danger;
$state-danger-border: $danger;
$state-danger-text: $danger;

/* Header */
$login-text-color: $gray;
$login-link-color: $secondary;
$login-link-background-color: $orange;

/* Sidenav */

/* Change default breakpoint for the navigation bar */
$navCollapseWidth: $breakpoint-mobile;

/* Navbar */
$navbar-light-color: $white;
$navbar-light-toggle-hover-bg: $yellow;
$navbar-light-link-color: $white;
$navbar-light-link-hover-color: $primary;
$navbar-light-link-active-color: $primary;
$navbar-border-radius: 0;
$navbar-light-toggle-icon-bar-bg: $white;
$navbar-light-toggle-border-color: $white;

// Panels
$panel-primary-text: $red;

// Inverted navbar toggle
$navbar-inverse-toggle-hover-bg: $lightgray;
$navbar-inverse-toggle-icon-bar-bg: $lightgray;
$navbar-inverse-toggle-border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1)
  rgba(0, 0, 0, 0.25);

$grid-gutter-width: 4px; //$spacing-unit;

/* Buttons */
$btn-outline-color: $dark;
$btn-outline-border-color: $gray;
$btn-outline-bg-color: $white;
$btn-light-bg: $lightgray;
$btn-xs-font-size: 0.85rem;
$btn-xs-height: 1.65rem;
$btn-xs-padding: 0.15rem 0.5rem;

/* Pagination */
$pagination-color: $link-color;
$pagination-bg: $white;
$pagination-border-color: $gray;
$pagination-hover-color: $link-hover-color;
$pagination-hover-bg: $lightgray;
$pagination-hover-border-color: $gray;
$pagination-active-color: $gray;
$pagination-active-bg: $lightgray;
$pagination-active-border-color: $gray;
$pagination-disabled-color: $gray;
$pagination-disabled-bg: $white;
$pagination-disabled-border-color: $gray;

$nav-tabs-active-link-hover-color: $dark;
$input-color: $dark;

/* Style fixes */

// Limit clickable area to the logo image.
.header-wrapper .header-logo a.block {
    width: fit-content;
}

// Limit clickable area to the thumbnail image.
.result-thumbnail.block {
    width: fit-content;
}

// Ensure Playlist Items tracker points to the first line of the item link.
ul.ramp--structured-nav__tree li.active > a {
    display: inline;
}

/* Needed to make the display consistent with the previous version */

.alert-success {
    background-color: $alert-success-bg;
    border-color: $alert-success-border;
}

.bg-primary {
    background-color: $primary;
}

.btn-primary {
    color: $white;
    background-color: $primary;
    border-color: $primary;
}

.btn-primary:hover {
    color: $white;
    background-color: $secondary;
    border-color: $secondary;
}

.btn-info {
    background-color: $teal-lightest;
    border-color: $teal-lightest;
}

.btn-info:hover {
    color: #212529;
    background-color: #a8eaee;
    border-color: #9ee8ec;
}

.btn-danger:not(:disabled) {
    background-color: $red;
    border-color: $red;
}

.btn-danger:hover {
    background-color: $red-darker;
    border-color: $red-darker;
}

.page-item.active .page-link {
    color: $dark !important;
}

